# Gomoku

./: .gitignore  CMakeLists.txt  Makefile  README.md  fileSave.py  main.cpp  visualiser.py
board/include/: IBoard.hpp  tempBoard.hpp
board/src/: tempBoard.cpp
communication/include/: ACommunication.hpp  ICommunication.hpp
communication/src/: ACommunication.cpp
python/: README.md  fileGeneratorRandom.py  fileSave.py  visualizer.py
src/: CMakeLists.txt  Communication.cpp  Communication.hpp  ICommunication.hpp
src/board/: Board.cpp  Board.hpp  CMakeLists.txt  board.cpp  board.hpp
src/brains/: ABrain.cpp  ABrain.hpp  BetaBrain.cpp  BetaBrain.hpp  CMakeLists.txt  DefaultBrain.cpp  DefaultBrain.hpp  DumbBrain.cpp  DumbBrain.hpp
src/playAnalisys/: PlayAnalysis.cpp  PlayAnalysis.hpp
src/playAnalysis/: CMakeLists.txt  PlayAnalysis.cpp  PlayAnalysis.hpp
